# slowflow

./: CMakeLists.txt  README.md  accumulate.cpp  adaptiveFR.cpp  configuration.h  configuration_epic.h  dense_tracking.cpp  slow_flow.cpp
cfgs/: dense_tracking.cfg  slow_flow.cfg
epic_flow_extended/: Makefile  array_types.h  epic.cpp  epic_aux.cpp  epicflow.cpp  image.c  image.h  io.c  solver.c  variational.c  variational_aux.c  variational_aux.h  variational_aux_mt.cpp  variational_aux_mt.h  variational_mt.cpp  variational_mt.h
matlab/: detect_edges.m
penalty_functions/: geman_mcclure.h  lorentzian.h  modified_l1_norm.h  penalty_function.h  quadratic_function.h  trunc_modified_l1_norm.h
utils/: hypothesis.cpp  hypothesis.h  parameter_list.cpp  parameter_list.h  utils.cpp  utils.h
